Fix missing space on top of sidemenu on iPhone

--- a/scss/app/components/sidemenu.scss
+++ b/scss/app/components/sidemenu.scss
@@ -117,3 +117,7 @@ $sidemenu-animation-time: 200ms;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
     }
 }
+
+.platform-ios .sidemenu-content {
+    padding-top: 40px + $ios-statusbar-height;
+}
